# AIOCSalesTeam

./: README.md  pyproject.toml  report.md  requirements.txt  sales_pitch.md
nearcrew_3_11/: pyvenv.cfg
src/aiocsalesteam/: crew.py  main.py
src/aiocsalesteam/config/: agents.yaml  tasks.yaml
src/aiocsalesteam/tools/: custom_tool.py  data_preparation_tool.py  federation_training_tool.py  set_greeting_tool.py  tip_sender_tool.py
